# sfmlPlayground

./: .gitignore  CMakeLists.txt  Hello.cpp  LICENCE.md  Makefile  README.md  Window.cpp
src/: Hello.cpp
